Java8 Optional;查找算法